Compiler/src/grammars/DartParser.java
// Generated from E:/University/Fourth/term 2/compiler/Compiler/src/grammars\DartParser.g4 by ANTLR 4.10.1
package grammars;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT=1, OPENED_BRACES=2, CLOSED_BRACES=3, OPENED_CURLY_BRACES=4, CLOSED_CURLY_BRACES=5, 
		OPENED_SQUERE_BRACES=6, CLOSED_SQUERE_BRACES=7, ARROW=8, IMPORT=9, CLASS=10, 
		FOR=11, WHILE=12, DO=13, BODY=14, LIST=15, WIDGET=16, FUNCTION=17, STATE=18, 
		LISTVIEW=19, CHILDREN=20, CHILD=21, ROW=22, COLUMN=23, TEXTWIDGET=24, 
		CONTAINER=25, WIDTH=26, HEIGHT=27, BUTTON=28, ONPRESSED=29, COLOR=30, 
		COLOR_C=31, IMAGE_I=32, IMAGE=33, ASSETIMAGE=34, NETWORKIMAGE=35, NAVIGATOR=36, 
		PUSH=37, POP=38, BUILDER=39, MATERIALPAGEROUTE=40, MATERIALAPP=41, HOME=42, 
		SCAFFOLD=43, TEXTFIELD=44, ONCHANGED=45, SETSTATE=46, INTEGER_LITERAL=47, 
		DOUBLE_LITERAL=48, BOOLEAN_LITERAL=49, STRING_LITERAL=50, DOUBLE_QOUTE=51, 
		SINGLE_QOUTE=52, VOID=53, INT=54, DOUBLE=55, STRING=56, BOOLEAN=57, TRUE=58, 
		FALSE=59, VAR=60, CONST=61, SWITCH=62, CASE=63, DEFAULT=64, BREAK=65, 
		RETURN=66, IF=67, ELSE=68, MAIN=69, EXTEND=70, OVERRIDE=71, REQUIRED=72, 
		COLOR_START=73, HEXDIGIT=74, COLOR_HEX=75, DIGIT=76, IDENTIFIER=77, IDENTIFIER_START=78, 
		IDENTIFIER_PART=79, LETTER=80, EQUAL=81, PLUS=82, PLUSPLUS=83, MINUS=84, 
		MINUSMINUS=85, MULTI=86, DDIVIDE=87, IDIVIDE=88, REMAIN=89, LESS_THAN=90, 
		LESS_THAN_EQUAL=91, GREATER_THAN=92, GREATER_THAN_EQUAL=93, NOT_EQUAL=94, 
		EQUAL_EQUAL=95, NOT=96, OR=97, OROR=98, AND=99, ANDAND=100, XOR=101, LEFT_SHIFT=102, 
		RIGHT_SHIFT=103, DOLLAR_SIGN=104, AT_SIGN=105, WS=106, COMMA=107, COLON=108, 
		SEMICOLON=109, CHAR=110;
	public static final int
		RULE_program = 0, RULE_initFunction = 1, RULE_statement = 2, RULE_navigation = 3, 
		RULE_materialPageRoue = 4, RULE_declaration = 5, RULE_assignment = 6, 
		RULE_type = 7, RULE_literal = 8, RULE_number = 9, RULE_binaryOperation = 10, 
		RULE_binaryOperationSide = 11, RULE_plusOrMinusOperation = 12, RULE_multiOrDivOrRemOperation = 13, 
		RULE_element = 14, RULE_relationalOperator = 15, RULE_side = 16, RULE_relationalCompare = 17, 
		RULE_bitwiseOperator = 18, RULE_bitwiseOperation = 19, RULE_logicOperator = 20, 
		RULE_booleanSide = 21, RULE_logicalOperation = 22, RULE_ifCondition = 23, 
		RULE_ifExpression = 24, RULE_elseExpression = 25, RULE_dfor = 26, RULE_dwhile = 27, 
		RULE_classMemberDefinition = 28, RULE_dclass = 29, RULE_constructor = 30, 
		RULE_block = 31, RULE_listElements = 32, RULE_functionParameter = 33, 
		RULE_namedDeclaration = 34, RULE_voidFunctionBlock = 35, RULE_typeFunctionBlock = 36, 
		RULE_functionType = 37, RULE_functionVoid = 38, RULE_functionDeclaration = 39, 
		RULE_sentParameter = 40, RULE_namedParameter = 41, RULE_nonNamedParameter = 42, 
		RULE_parametersToSend = 43, RULE_functionCall = 44, RULE_expression = 45, 
		RULE_dswitch = 46, RULE_switchCase = 47, RULE_defaultCase = 48, RULE_breakStatement = 49, 
		RULE_widget = 50, RULE_listView = 51, RULE_textWidget = 52, RULE_container = 53, 
		RULE_button = 54, RULE_row = 55, RULE_column = 56, RULE_property = 57, 
		RULE_color = 58, RULE_image = 59, RULE_materialApp = 60, RULE_scaffold = 61, 
		RULE_textField = 62, RULE_onChanged = 63, RULE_setState = 64;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "initFunction", "statement", "navigation", "materialPageRoue", 
			"declaration", "assignment", "type", "literal", "number", "binaryOperation", 
			"binaryOperationSide", "plusOrMinusOperation", "multiOrDivOrRemOperation", 
			"element", "relationalOperator", "side", "relationalCompare", "bitwiseOperator", 
			"bitwiseOperation", "logicOperator", "booleanSide", "logicalOperation", 
			"ifCondition", "ifExpression", "elseExpression", "dfor", "dwhile", "classMemberDefinition", 
			"dclass", "constructor", "block", "listElements", "functionParameter", 
			"namedDeclaration", "voidFunctionBlock", "typeFunctionBlock", "functionType", 
			"functionVoid", "functionDeclaration", "sentParameter", "namedParameter", 
			"nonNamedParameter", "parametersToSend", "functionCall", "expression", 
			"dswitch", "switchCase", "defaultCase", "breakStatement", "widget", "listView", 
			"textWidget", "container", "button", "row", "column", "property", "color", 
			"image", "materialApp", "scaffold", "textField", "onChanged", "setState"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'=>'", "'import'", 
			"'class'", "'for'", "'while'", "'do'", "'body'", "'List'", "'Widget'", 
			"'Function'", "'State'", "'ListView'", "'children'", "'child'", "'Row'", 
			"'Column'", "'Text'", "'Container'", "'width'", "'height'", "'TextButton'", 
			"'onPressed'", "'color'", "'Color'", "'Image'", "'image'", "'AssetImage'", 
			"'NetworkImage'", "'Navigator'", "'push'", "'pop'", "'builder'", "'MaterialPageRoute'", 
			"'MaterialApp'", "'home'", "'Scaffold'", "'TextField'", "'onChanged'", 
			"'setState'", null, null, null, null, "'\"'", "'''", "'void'", "'int'", 
			"'double'", "'String'", "'bool'", "'true'", "'false'", "'var'", "'const'", 
			"'switch'", "'case'", "'default'", "'break'", "'return'", "'if'", "'else'", 
			"'main'", "'extends'", "'override'", "'required'", "'0x'", null, null, 
			null, null, null, null, null, "'='", "'+'", "'++'", "'-'", "'--'", "'*'", 
			"'/'", "'~/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'!='", "'=='", "'!'", 
			"'|'", "'||'", "'&'", "'&&'", "'^'", "'<<'", "'>>'", "'$'", "'@'", null, 
			"','", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOT", "OPENED_BRACES", "CLOSED_BRACES", "OPENED_CURLY_BRACES", 
			"CLOSED_CURLY_BRACES", "OPENED_SQUERE_BRACES", "CLOSED_SQUERE_BRACES", 
			"ARROW", "IMPORT", "CLASS", "FOR", "WHILE", "DO", "BODY", "LIST", "WIDGET", 
			"FUNCTION", "STATE", "LISTVIEW", "CHILDREN", "CHILD", "ROW", "COLUMN", 
			"TEXTWIDGET", "CONTAINER", "WIDTH", "HEIGHT", "BUTTON", "ONPRESSED", 
			"COLOR", "COLOR_C", "IMAGE_I", "IMAGE", "ASSETIMAGE", "NETWORKIMAGE", 
			"NAVIGATOR", "PUSH", "POP", "BUILDER", "MATERIALPAGEROUTE", "MATERIALAPP", 
			"HOME", "SCAFFOLD", "TEXTFIELD", "ONCHANGED", "SETSTATE", "INTEGER_LITERAL", 
			"DOUBLE_LITERAL", "BOOLEAN_LITERAL", "STRING_LITERAL", "DOUBLE_QOUTE", 
			"SINGLE_QOUTE", "VOID", "INT", "DOUBLE", "STRING", "BOOLEAN", "TRUE", 
			"FALSE", "VAR", "CONST", "SWITCH", "CASE", "DEFAULT", "BREAK", "RETURN", 
			"IF", "ELSE", "MAIN", "EXTEND", "OVERRIDE", "REQUIRED", "COLOR_START", 
			"HEXDIGIT", "COLOR_HEX", "DIGIT", "IDENTIFIER", "IDENTIFIER_START", "IDENTIFIER_PART", 
			"LETTER", "EQUAL", "PLUS", "PLUSPLUS", "MINUS", "MINUSMINUS", "MULTI", 
			"DDIVIDE", "IDIVIDE", "REMAIN", "LESS_THAN", "LESS_THAN_EQUAL", "GREATER_THAN", 
			"GREATER_THAN_EQUAL", "NOT_EQUAL", "EQUAL_EQUAL", "NOT", "OR", "OROR", 
			"AND", "ANDAND", "XOR", "LEFT_SHIFT", "RIGHT_SHIFT", "DOLLAR_SIGN", "AT_SIGN", 
			"WS", "COMMA", "COLON", "SEMICOLON", "CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DartParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public InitFunctionContext initFunction() {
			return getRuleContext(InitFunctionContext.class,0);
		}
		public List<DclassContext> dclass() {
			return getRuleContexts(DclassContext.class);
		}
		public DclassContext dclass(int i) {
			return getRuleContext(DclassContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(DartParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(DartParser.SEMICOLON, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(135);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(130);
						dclass();
						}
						break;
					case 2:
						{
						setState(131);
						functionDeclaration();
						}
						break;
					case 3:
						{
						setState(132);
						declaration();
						setState(133);
						match(SEMICOLON);
						}
						break;
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(140);
			initFunction();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << LIST) | (1L << WIDGET) | (1L << FUNCTION) | (1L << STATE) | (1L << VOID) | (1L << INT) | (1L << DOUBLE) | (1L << STRING) | (1L << BOOLEAN) | (1L << VAR) | (1L << CONST))) != 0) || _la==IDENTIFIER) {
				{
				setState(146);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(141);
					dclass();
					}
					break;
				case 2:
					{
					setState(142);
					functionDeclaration();
					}
					break;
				case 3:
					{
					setState(143);
					declaration();
					setState(144);
					match(SEMICOLON);
					}
					break;
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitFunctionContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(DartParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(DartParser.MAIN, 0); }
		public TerminalNode OPENED_BRACES() { return getToken(DartParser.OPENED_BRACES, 0); }
		public TerminalNode CLOSED_BRACES() { return getToken(DartParser.CLOSED_BRACES, 0); }
		public TerminalNode OPENED_CURLY_BRACES() { return getToken(DartParser.OPENED_CURLY_BRACES, 0); }
		public TerminalNode CLOSED_CURLY_BRACES() { return getToken(DartParser.CLOSED_CURLY_BRACES, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public InitFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterInitFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitInitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitInitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitFunctionContext initFunction() throws RecognitionException {
		InitFunctionContext _localctx = new InitFunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_initFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(VOID);
			setState(152);
			match(MAIN);
			setState(153);
			match(OPENED_BRACES);
			setState(154);
			match(CLOSED_BRACES);
			setState(155);
			match(OPENED_CURLY_BRACES);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPENED_BRACES) | (1L << FOR) | (1L << WHILE) | (1L << LIST) | (1L << WIDGET) | (1L << FUNCTION) | (1L << STATE) | (1L << NAVIGATOR) | (1L << SETSTATE) | (1L << INTEGER_LITERAL) | (1L << DOUBLE_LITERAL) | (1L << BOOLEAN_LITERAL) | (1L << VOID) | (1L << INT) | (1L << DOUBLE) | (1L << STRING) | (1L << BOOLEAN) | (1L << VAR) | (1L << CONST) | (1L << SWITCH))) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (IF - 67)) | (1L << (IDENTIFIER - 67)) | (1L << (NOT - 67)))) != 0)) {
				{
				{
				setState(156);
				statement();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			match(CLOSED_CURLY_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public NavigationContext navigation() {
			return getRuleContext(NavigationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DartParser.SEMICOLON, 0); }
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public BinaryOperationContext binaryOperation() {
			return getRuleContext(BinaryOperationContext.class,0);
		}
		public RelationalCompareContext relationalCompare() {
			return getRuleContext(RelationalCompareContext.class,0);
		}
		public LogicalOperationContext logicalOperation() {
			return getRuleContext(LogicalOperationContext.class,0);
		}
		public DwhileContext dwhile() {
			return getRuleContext(DwhileContext.class,0);
		}
		public DforContext dfor() {
			return getRuleContext(DforContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public DswitchContext dswitch() {
			return getRuleContext(DswitchContext.class,0);
		}
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public SetStateContext setState() {
			return getRuleContext(SetStateContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				navigation();
				setState(165);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				declaration();
				setState(168);
				match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				assignment();
				setState(171);
				match(SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(173);
				binaryOperation();
				setState(174);
				match(SEMICOLON);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(176);
				relationalCompare();
				setState(177);
				match(SEMICOLON);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(179);
				logicalOperation();
				setState(180);
				match(SEMICOLON);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(182);
				dwhile();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(183);
				dfor();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(184);
				functionDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(185);
				functionCall();
				setState(186);
				match(SEMICOLON);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(188);
				dswitch();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(189);
				ifCondition();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(190);
				setState();
				setState(191);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
